--- a/style.css
+++ b/style.css
@@ -1,20 +1,29 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    sans-serif;
   margin: 0px;
-  background: #f7f7f7;
   display: grid;
-  justify-items: center;
   gap: 60px;
+  justify-items: center;
   margin-top: 60px;
+  background-color: #fce7fb;
+  background-image: url("img/pastel-pink-blue-glittery-background.jpg");
+  background-blend-mode: overlay;
 }
 
 img {
   max-width: 100%;
-  display: block;
+  display: flex;
 }
 
 a {
   text-decoration: none;
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
 }
 
 p,
@@ -23,9 +32,16 @@ h2,
 h3 {
   margin: 0px;
 }
+
 p {
-  font-size: 20px;
-  line-height: 1.4;
+  font-size: 1.25rem;
+  line-height: 1.3;
+}
+
+.header {
+  display: grid;
+  gap: 60px;
+  justify-items: center;
 }
 
 .menu {
@@ -36,11 +52,17 @@ p {
 }
 
 .menu a {
+  display: block;
   background: #ffffff;
+  padding: 1rem 2rem;
   border-radius: 4px;
-  padding: 15px 30px;
   color: #000000;
   text-transform: uppercase;
+  border: 2px solid #fff;
+}
+
+.menu a:hover {
+  border-color: #ff536c;
 }
 
 .conteudo {
@@ -60,33 +82,50 @@ p {
   justify-items: end;
 }
 
-.detalhe {
+.introducao h1 {
+  font-size: 2rem;
+}
+
+.introducao::before {
+  content: "";
   width: 60px;
   height: 4px;
-  background: #ee2211;
+  background: #ff536c;
   position: absolute;
-  top: 20px;
+  top: 30px;
   right: -30px;
 }
 
+.introducao-cover img {
+  object-fit: cover;
+  height: 100%;
+}
+
 .botao {
-  background: #ee2211;
+  background: #ff536c;
   color: #fff;
-  padding: 15px 30px;
+  padding: 1rem 2rem;
   border-radius: 4px;
+  text-transform: uppercase;
+}
+
+.botao:hover {
+  background: #e0189c;
 }
 
 .subtitulo {
-  font-size: 64px;
-  text-decoration: uppercase;
+  font-size: 4rem;
+  text-transform: uppercase;
+  color: rgba(141, 8, 130, 0.2);
   text-align: right;
   padding: 40px;
   align-self: center;
-  color: #c6c6c6;
+  background-image: url("./img/onda.svg");
+  /* word-break: break-all; */
 }
 
 .vantagens {
-  background: #ffffff;
+  background: #fff;
   padding: 40px;
 }
 
@@ -95,15 +134,68 @@ p {
   grid-template-columns: auto 1fr;
   gap: 10px 20px;
   padding: 20px;
+  border-left: 4px solid transparent;
 }
+img li {
+  font-size: 0.875em;
+}
+.vantagens-item:nth-child(odd) {
+  background: #f7f7f7;
+}
+
+.vantagens-item:hover {
+  border-color: #ff536c;
+}
+
 .vantagens-item p {
   grid-column: 2;
 }
 
 .rodape {
+  background: #fff3fe;
   width: 100%;
-  background: #ffffff;
-  padding: 40px;
   text-align: center;
+  padding: 40px;
   box-sizing: border-box;
+}
+
+@media (max-width: 1000px) {
+  .conteudo-vantagem {
+    grid-template-columns: 1fr;
+  }
+  .subtitulo {
+    text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  body {
+    gap: 30px;
+    margin-top: 20px;
+  }
+  .header {
+    gap: 30px;
+  }
+  .conteudo {
+    grid-template-columns: 1fr;
+  }
+  .introducao {
+    text-align: left;
+    justify-items: start;
+  }
+  .introducao::before {
+    display: none;
+  }
+  .subtitulo {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .subtitulo {
+    font-size: 2rem;
+  }
+  p {
+    font-size: 1rem;
+  }
 }
